# senpy

./: .gitignore  README.md  build_noupload.bat  pyproject.toml
examples/: mle_neyer.py
senpy/: __init__.py
