[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "senpy-sensei"
version = "1.3.1"
description = "A python package of algorithms for sensitivity testing."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls.Repository = "https://github.com/ACasey13/senpy"
dependencies = ["scipy", "numpy", "scikit-image", "matplotlib"]